--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "postinstall": "prisma generate",
     "clean": "rm -rf .next out dist build",
     "deploy": "npm run build && npm start",
-    "health-check": "curl -f http://localhost:3000/api/health || exit 1"
+    "health-check": "curl -f http://localhost:3000/api/health || exit 1",
+    "verify-deployment": "node scripts/verify-deployment.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
