--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "clean": "rm -rf .next out dist build",
     "deploy": "npm run build && npm start",
     "health-check": "curl -f http://localhost:3000/api/health || exit 1",
-    "verify-deployment": "node scripts/verify-deployment.js"
+    "verify-deployment": "node scripts/verify-deployment.js",
+    "railway:build": "npx prisma generate && npm run build",
+    "railway:start": "npx prisma migrate deploy && npm start"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
