--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
-builder = "NIXPACKS"
-buildCommand = "npm ci && npm run railway:build"
+builder = "DOCKERFILE"
+dockerfilePath = "Dockerfile.simple"
 
 [deploy]
-startCommand = "npm run railway:start"
+startCommand = "npm start"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
